# ev-demand-forecasting

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
infra/: docker-compose.yml
infra/migrations/: 001_init.sql
src/: api.py  config.py  etl.py  features.py  models.py  pipeline.py  report.py
