[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charging-demand-predictor"
version = "0.1.0"
description = "EV charging demand and energy forecasting pipeline."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "xgboost>=2.1.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pydantic>=2.8.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "streamlit>=1.39.0",
  "plotly>=5.24.0",
  "mlflow>=2.16.0",
  "joblib>=1.4.0",
  "acnportal>=0.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]
